This file lists all changes made to the game driver in all glory detail.
See the file HISTORY for a user-oriented summary of all the changes.

31-Jan-2009 (Zesstra)
  - Fixed german manpage for unique_array() which contained german and english.

30-Jan-2009 (Fuchur)
  - (main.c)
    Fix bug building erq_args, which could cause memory corruption. (#604)

29-Jan-2009 (Gnomi)
  - (access_check.c, comm.c, main.c)
    Made access control a runtime option.

28-Jan-2009 (Gnomi)
  - (backend.c)
    !-escaped commands are treated specially even
    if the player object doesn't have an environment.
  - (comm.c)
    Correctly detect if input_to() was called more than once
    in the same execution thread (Bug #535).

27-Jan-2009 (Gnomi)
  - (xalloc.c)
    realloc() should also consider the xalloc overhead, when
      assessing the available space.
  - (main.c)
    Corrected --longhelp output of TLS options.
  - (comm.c, configure)
    Removed support for write threads.

18-Jan-2009 (Zesstra)
  - (pkg-mysql.c)
    Fixed corrupted results of db_conv_string(). (#602).

17-Jan-2009 (Zesstra)
  - (efuns.c)
    Relaxed syntax check in v_trim() to allow a 0 as <ch> for trimming 
      "\0" (#473)

17-Jan-2009 (Fuchur)
  - (efuns.c, func_spec, mudlib/sys/debug_info.h, doc/efun/debug_info,
    doc/efun.de/debug_info.de)
    use debug_info instead of new get_eval_number() efun.
  - (efuns.c, func_spec, interpret.c, interpret.h, doc/efuns/get_eval_number,
    doc/efuns.de/get_eval_number.de)
    add get_eval_number efun.
  - (backend.c, comm.c, interpret.c, object.c)
    call mark_(start|end)_evaluation() in various places (#476)
  - (prolang.y)
    check return value of verify_declared() - fixes a crash in t-language

17-Jan-2009 (Gnomi)
  - (object.c)
    Save_object without a filename removed one too many elements
    from the stack. (Bug #595)
  
16-Jan-2009 (Zesstra)
  - (config.h.in, lex.c)
    Enforce the possible value range for ITABLE_SIZE (256 - SHRT_MAX/32768).