@@ -4,6 +4,13 @@ the host system.
 
 For a detailed list of all changes see the file CHANGELOG.
 xx-xxx-xxxx -- 3.3.719
+
+    - Fixed Crashes:
+       + gmtime(), localtime(), ctime() and strftime() could crash the driver
+         on platforms where time_t is 64 bits long and users supply huge
+         values as time stamp (>2^55) due to unchecked results from libc
+         functions (Bug #587).
+
     - Other
        + Generalized the write buffer for non-threaded use and renamed the
           configuration option '--with-pthreads-write-max-size' to
