@@ -1,6 +1,18 @@
 This file lists all changes made to the game driver in all glory detail.
 See the file HISTORY for a user-oriented summary of all the changes.
 
+15-Jan-2009 (Zesstra)
+  - (port.c)
+    Check results of gmtime() and localtime() and return NULL, if NULL is
+    returned.
+  - (efuns.c)
+    Check results of gmtime(), localtime(), time_fstring() and utime_string()
+    for being NULL and raise a runtime error. (#587)
+  - (test/inc/testarry.inc, test/t-mantis.c)
+    Added tests for the efuns affected by bug #587.
+    Added an test flag TF_DONTCHECKERROR for tests which must not crash the
+    driver but may cause a runtime error or not.
+
 31-Jan-2009 (Zesstra)
   - Fixed german manpage for unique_array() which contained german and english.
 
